@@ -369,6 +369,7 @@ MOBDEATH=DEATH
 # (expression) The players lost experience is calculated based on the
 #              give math expression, using + - * / (), and using @x1 to
 #              stand for the players level, and @x2 the killers level
+# (blank)      Fleeing has no bad consequences, breaking several char classes.
 FLEE=EXPERIENCE
 
 # The EXPRATE describes how quickly experience rises or falls 
