@@ -1,5 +1,6 @@
 # Build 5.8.6 Released ??/??/2015
    1. Web Server upgraded to 2.3
+   2. coffeemud.ini entry FLEE has new (blank) option to basically disable fleeing and break a bunch of skills.
 # Build 5.8.5 Released 12/23/2014
    1. Sailing ship creation and distribution now actually works.
    2. Sailing Ships are now only as fast as their item's "ability" score. (1 means 1 move per tick, etc)
